--- a/app/src/main/res/layout/activity_set_number.xml
+++ b/app/src/main/res/layout/activity_set_number.xml
@@ -12,6 +12,8 @@
         android:layout_height="171dp"
         android:text="Would you like to enable 2 spies?"
         android:textAlignment="center"
+
+        android:fontFamily="monospace"
         android:textColor="@color/colorPrimary"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="ENABLE 2 SPIES   "
+        android:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +43,7 @@
 
         android:text="NEXT"
         android:textColorHint="#00F07979"
+        android:fontFamily="monospace"
 
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
