--- a/app/src/main/res/layout/activity_game_start.xml
+++ b/app/src/main/res/layout/activity_game_start.xml
@@ -13,12 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:onClick="revealIdentity"
         android:text="REVEAL IDENTITY"
         android:textColorHint="#00F07979"
+
         android:textSize="25dp"
 
         android:typeface="monospace"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
