--- a/app/src/main/res/layout/activity_ask_reveal_identity.xml
+++ b/app/src/main/res/layout/activity_ask_reveal_identity.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".AskRevealIdentity">
 
+    <Button
+        android:id="@+id/button2"
+
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:onClick="showIdentity"
+        android:text="REVEAL IDENTITY"
+
+        android:textColorHint="#00F07979"
+
+        android:textSize="25dp"
+        android:typeface="monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewAsk" />
+
+    <TextView
+        android:id="@+id/textViewAsk"
+        android:layout_width="295dp"
+        android:layout_height="250dp"
+        android:fontFamily="monospace"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
