--- a/app/src/main/res/layout/activity_show_identity.xml
+++ b/app/src/main/res/layout/activity_show_identity.xml
@@ -32,9 +32,10 @@
         android:layout_marginTop="50dp"
 
         android:fontFamily="monospace"
+        android:onClick="nextPlayer"
         android:text="CONFIRM"
-        android:textColorHint="#00F07979"
 
+        android:textColorHint="#00F07979"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
